--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
 		"aws-amplify": "^6.11.0",
 		"clsx": "2.1.1",
 		"framer-motion": "11.15.0",
+		"json-schema-to-ts": "^3.1.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-router-dom": "6.23.0",
 		"tailwind-variants": "0.1.20",
-		"tailwindcss": "3.4.16"
+		"tailwindcss": "3.4.16",
+		"ts-algebra": "^2.0.0"
 	},
 	"devDependencies": {
 		"@aws-amplify/backend": "^1.5.0",
@@ -44,7 +46,7 @@
 		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "10.4.19",
 		"aws-cdk": "^2.138.0",
-    	"aws-cdk-lib": "^2.138.0",
+		"aws-cdk-lib": "^2.138.0",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-plugin-import": "^2.26.0",
