--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@nextui-org/snippet": "2.2.9",
 		"@nextui-org/switch": "2.2.7",
 		"@nextui-org/system": "2.4.5",
+		"@nextui-org/table": "^2.2.8",
 		"@nextui-org/theme": "2.4.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@react-types/shared": "3.26.0",
