--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@aws-amplify/ui-react": "^6.8.0",
 		"@nextui-org/button": "2.2.8",
 		"@nextui-org/code": "2.2.5",
+		"@nextui-org/drawer": "^2.2.7",
 		"@nextui-org/dropdown": "2.3.3",
 		"@nextui-org/input": "2.4.7",
 		"@nextui-org/kbd": "2.2.5",
@@ -23,6 +24,7 @@
 		"@nextui-org/system": "2.4.5",
 		"@nextui-org/table": "^2.2.8",
 		"@nextui-org/theme": "2.4.4",
+		"@nextui-org/use-disclosure": "^2.2.2",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@react-types/shared": "3.26.0",
 		"aws-amplify": "^6.11.0",
