--- a/package.json
+++ b/package.json
@@ -1,70 +1,70 @@
 {
-	"name": "rose-lap6",
-	"private": true,
-	"version": "1.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "eslint -c .eslintrc.json ./src/**/**/*.{ts,tsx} --fix",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@aws-amplify/ui-react": "^6.8.0",
-		"@nextui-org/autocomplete": "^2.3.9",
-		"@nextui-org/button": "2.2.8",
-		"@nextui-org/card": "^2.2.9",
-		"@nextui-org/code": "2.2.5",
-		"@nextui-org/drawer": "^2.2.7",
-		"@nextui-org/dropdown": "2.3.3",
-		"@nextui-org/input": "2.4.7",
-		"@nextui-org/kbd": "2.2.5",
-		"@nextui-org/link": "2.2.6",
-		"@nextui-org/navbar": "2.2.7",
-		"@nextui-org/snippet": "2.2.9",
-		"@nextui-org/switch": "2.2.7",
-		"@nextui-org/system": "2.4.5",
-		"@nextui-org/table": "^2.2.8",
-		"@nextui-org/theme": "2.4.4",
-		"@nextui-org/use-disclosure": "^2.2.2",
-		"@react-aria/visually-hidden": "3.8.12",
-		"@react-types/shared": "3.26.0",
-		"aws-amplify": "^6.11.0",
-		"clsx": "2.1.1",
-		"framer-motion": "11.15.0",
-		"json-schema-to-ts": "^3.1.1",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"react-router-dom": "6.23.0",
-		"tailwind-variants": "0.1.20",
-		"tailwindcss": "3.4.16",
-		"ts-algebra": "^2.0.0"
-	},
-	"devDependencies": {
-		"@aws-amplify/backend": "^1.14.0",
-		"@aws-amplify/backend-cli": "^1.2.9",
-		"@types/node": "20.5.7",
-		"@types/react": "18.3.3",
-		"@types/react-dom": "18.3.0",
-		"@typescript-eslint/eslint-plugin": "8.11.0",
-		"@typescript-eslint/parser": "8.11.0",
-		"@vitejs/plugin-react": "^4.2.1",
-		"autoprefixer": "10.4.19",
-		"aws-cdk": "^2.177.0",
-		"aws-cdk-lib": "^2.138.0",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "9.1.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "5.2.1",
-		"eslint-plugin-react": "^7.23.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-unused-imports": "4.1.4",
-		"postcss": "8.4.38",
-		"prettier": "3.3.3",
-		"typescript": "5.6.3",
-		"vite": "^5.2.0",
-		"vite-tsconfig-paths": "^4.3.2"
-	}
+ "name": "rose-lap6",
+ "private": true,
+ "version": "1.0.0",
+ "type": "module",
+ "scripts": {
+  "dev": "vite",
+  "build": "tsc && vite build",
+  "lint": "eslint -c .eslintrc.json ./src/**/**/*.{ts,tsx} --fix",
+  "preview": "vite preview"
+ },
+ "dependencies": {
+  "@aws-amplify/ui-react": "^6.8.0",
+  "@heroui/autocomplete": "2.3.17",
+  "@heroui/button": "2.2.16",
+  "@heroui/card": "2.2.15",
+  "@heroui/code": "2.2.12",
+  "@heroui/drawer": "2.2.13",
+  "@heroui/dropdown": "2.3.16",
+  "@heroui/input": "2.4.16",
+  "@heroui/kbd": "2.2.12",
+  "@heroui/link": "2.2.13",
+  "@heroui/navbar": "2.2.14",
+  "@heroui/snippet": "2.2.17",
+  "@heroui/switch": "2.2.14",
+  "@heroui/system": "2.4.12",
+  "@heroui/table": "2.2.15",
+  "@heroui/theme": "2.4.12",
+  "@heroui/use-disclosure": "2.2.8",
+  "@react-aria/visually-hidden": "3.8.12",
+  "@react-types/shared": "3.26.0",
+  "aws-amplify": "^6.11.0",
+  "clsx": "2.1.1",
+  "framer-motion": "11.15.0",
+  "json-schema-to-ts": "^3.1.1",
+  "react": "18.3.1",
+  "react-dom": "18.3.1",
+  "react-router-dom": "6.23.0",
+  "tailwind-variants": "0.1.20",
+  "tailwindcss": "3.4.16",
+  "ts-algebra": "^2.0.0"
+ },
+ "devDependencies": {
+  "@aws-amplify/backend": "^1.14.0",
+  "@aws-amplify/backend-cli": "^1.2.9",
+  "@types/node": "20.5.7",
+  "@types/react": "18.3.3",
+  "@types/react-dom": "18.3.0",
+  "@typescript-eslint/eslint-plugin": "8.11.0",
+  "@typescript-eslint/parser": "8.11.0",
+  "@vitejs/plugin-react": "^4.2.1",
+  "autoprefixer": "10.4.19",
+  "aws-cdk": "^2.177.0",
+  "aws-cdk-lib": "^2.138.0",
+  "eslint": "^8.57.0",
+  "eslint-config-prettier": "9.1.0",
+  "eslint-plugin-import": "^2.26.0",
+  "eslint-plugin-jsx-a11y": "^6.4.1",
+  "eslint-plugin-node": "^11.1.0",
+  "eslint-plugin-prettier": "5.2.1",
+  "eslint-plugin-react": "^7.23.2",
+  "eslint-plugin-react-hooks": "^4.6.0",
+  "eslint-plugin-unused-imports": "4.1.4",
+  "postcss": "8.4.38",
+  "prettier": "3.3.3",
+  "typescript": "5.6.3",
+  "vite": "^5.2.0",
+  "vite-tsconfig-paths": "^4.3.2"
+ }
 }
