--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "@heroui/autocomplete": "2.3.16",
   "@heroui/button": "2.2.15",
   "@heroui/card": "2.2.14",
+  "@heroui/checkbox": "^2.3.16",
   "@heroui/code": "2.2.11",
   "@heroui/drawer": "2.2.12",
   "@heroui/dropdown": "2.3.15",
