--- a/package.json
+++ b/package.json
@@ -32,14 +32,18 @@
   "@react-aria/visually-hidden": "3.8.12",
   "@react-types/shared": "3.26.0",
   "aws-amplify": "^6.11.0",
-  "clsx": "2.1.1",
+  "class-variance-authority": "^0.7.1",
+  "clsx": "^2.1.1",
   "framer-motion": "11.15.0",
   "json-schema-to-ts": "^3.1.1",
+  "lucide-react": "^0.507.0",
   "react": "18.3.1",
   "react-dom": "18.3.1",
   "react-router-dom": "6.23.0",
+  "tailwind-merge": "^3.2.0",
   "tailwind-variants": "0.1.20",
   "tailwindcss": "3.4.16",
+  "tailwindcss-animate": "^1.0.7",
   "ts-algebra": "^2.0.0"
  },
  "devDependencies": {
