--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "@heroui/switch": "2.2.13",
   "@heroui/system": "2.4.11",
   "@heroui/table": "2.2.14",
+  "@heroui/tabs": "^2.2.16",
   "@heroui/theme": "2.4.11",
   "@heroui/use-disclosure": "2.2.7",
   "@react-aria/visually-hidden": "3.8.12",
