--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "@heroui/link": "2.2.12",
   "@heroui/modal": "^2.2.12",
   "@heroui/navbar": "2.2.13",
+  "@heroui/progress": "^2.2.15",
   "@heroui/snippet": "2.2.16",
   "@heroui/switch": "2.2.13",
   "@heroui/system": "2.4.11",
