--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "react": "18.3.1",
   "react-dom": "18.3.1",
   "react-router-dom": "6.23.0",
+  "recharts": "^2.15.3",
   "tailwind-merge": "^3.2.0",
   "tailwind-variants": "0.1.20",
   "tailwindcss": "3.4.16",
