--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "@heroui/card": "2.2.14",
   "@heroui/checkbox": "^2.3.16",
   "@heroui/code": "2.2.11",
+  "@heroui/date-input": "^2.3.18",
   "@heroui/drawer": "2.2.12",
   "@heroui/dropdown": "2.3.15",
   "@heroui/input": "2.4.15",
@@ -31,6 +32,7 @@
   "@heroui/tabs": "^2.2.16",
   "@heroui/theme": "2.4.11",
   "@heroui/use-disclosure": "2.2.7",
+  "@internationalized/date": "^3.8.0",
   "@react-aria/visually-hidden": "3.8.12",
   "@react-types/shared": "3.26.0",
   "aws-amplify": "^6.11.0",
